@@ -73,6 +73,8 @@
     <mybatis-velocity.version>2.1.1</mybatis-velocity.version>
     <mybatis-thymeleaf.version>1.0.3</mybatis-thymeleaf.version>
     <spring-boot.version>2.7.3</spring-boot.version>
+
+    <argLine>-Djdk.attach.allowAttachSelf --add-opens java.base/java.lang=ALL-UNNAMED</argLine>
   </properties>
 
   <build>
